# serializer version: 1
# name: test_config_entry_diagnostics
  dict({
    'config_entry': dict({
      'data': dict({
        'host': '127.0.0.1',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'heos',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'HEOS System (via 127.0.0.1)',
      'unique_id': 'heos',
      'version': 1,
    }),
    'favorites': dict({
      '1': dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': '123456789',
        'name': "Today's Hits Radio",
        'playable': True,
        'source_id': 1,
        'type': 'station',
      }),
      '2': dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 's1234',
        'name': 'Classical MPR (Classical Music)',
        'playable': True,
        'source_id': 3,
        'type': 'station',
      }),
    }),
    'groups': dict({
      '999': dict({
        'group_id': 999,
        'is_muted': False,
        'lead_player_id': 1,
        'member_player_ids': list([
          2,
        ]),
        'name': 'Group',
        'volume': 0,
      }),
    }),
    'heos': dict({
      'connection_state': 'disconnected',
      'current_credentials': None,
    }),
    'inputs': list([
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'inputs/aux_in_1',
        'name': 'HEOS Drive - Line In 1',
        'playable': True,
        'source_id': 1027,
        'type': 'station',
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'inputs/aux_in_1',
        'name': 'Speaker - Line In 1',
        'playable': True,
        'source_id': 1027,
        'type': 'station',
      }),
    ]),
    'source_list': list([
      "Today's Hits Radio",
      'Classical MPR (Classical Music)',
      'HEOS Drive - Line In 1',
      'Speaker - Line In 1',
    ]),
    'system': dict({
      'connected_to_preferred_host': True,
      'host': dict({
        'ip_address': '127.0.0.1',
        'model': 'HEOS Drive HS2',
        'name': 'Test Player',
        'network': 'wired',
        'preferred_host': True,
        'serial': '**REDACTED**',
        'supported_version': True,
        'version': '1.0.0',
      }),
      'hosts': list([
        dict({
          'ip_address': '127.0.0.1',
          'model': 'HEOS Drive HS2',
          'name': 'Test Player',
          'network': 'wired',
          'preferred_host': True,
          'serial': '**REDACTED**',
          'supported_version': True,
          'version': '1.0.0',
        }),
        dict({
          'ip_address': '127.0.0.2',
          'model': 'Speaker',
          'name': 'Test Player 2',
          'network': 'wifi',
          'preferred_host': False,
          'serial': '**REDACTED**',
          'supported_version': True,
          'version': '1.0.0',
        }),
      ]),
      'is_signed_in': True,
      'preferred_hosts': list([
        dict({
          'ip_address': '127.0.0.1',
          'model': 'HEOS Drive HS2',
          'name': 'Test Player',
          'network': 'wired',
          'preferred_host': True,
          'serial': '**REDACTED**',
          'supported_version': True,
          'version': '1.0.0',
        }),
      ]),
      'signed_in_username': '**REDACTED**',
    }),
  })
# ---
# name: test_config_entry_diagnostics_error_getting_system
  dict({
    'config_entry': dict({
      'data': dict({
        'host': '127.0.0.1',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'heos',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'HEOS System (via 127.0.0.1)',
      'unique_id': 'heos',
      'version': 1,
    }),
    'favorites': dict({
      '1': dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': '123456789',
        'name': "Today's Hits Radio",
        'playable': True,
        'source_id': 1,
        'type': 'station',
      }),
      '2': dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 's1234',
        'name': 'Classical MPR (Classical Music)',
        'playable': True,
        'source_id': 3,
        'type': 'station',
      }),
    }),
    'groups': dict({
      '999': dict({
        'group_id': 999,
        'is_muted': False,
        'lead_player_id': 1,
        'member_player_ids': list([
          2,
        ]),
        'name': 'Group',
        'volume': 0,
      }),
    }),
    'heos': dict({
      'connection_state': 'disconnected',
      'current_credentials': None,
    }),
    'inputs': list([
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'inputs/aux_in_1',
        'name': 'HEOS Drive - Line In 1',
        'playable': True,
        'source_id': 1027,
        'type': 'station',
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'inputs/aux_in_1',
        'name': 'Speaker - Line In 1',
        'playable': True,
        'source_id': 1027,
        'type': 'station',
      }),
    ]),
    'source_list': list([
      "Today's Hits Radio",
      'Classical MPR (Classical Music)',
      'HEOS Drive - Line In 1',
      'Speaker - Line In 1',
    ]),
    'system': dict({
      'error': 'Not connected to device',
    }),
  })
# ---
# name: test_device_diagnostics
  dict({
    'device': dict({
      'area_id': None,
      'configuration_url': None,
      'connections': list([
      ]),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'identifiers': list([
        list([
          'heos',
          '1',
        ]),
      ]),
      'labels': list([
      ]),
      'manufacturer': 'HEOS',
      'model': 'Drive HS2',
      'model_id': None,
      'name': 'Test Player',
      'name_by_user': None,
      'serial_number': '**REDACTED**',
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
    'entities': list([
      dict({
        'entity': dict({
          'area_id': None,
          'categories': dict({
          }),
          'config_subentry_id': None,
          'disabled_by': None,
          'entity_category': None,
          'entity_id': 'media_player.test_player',
          'has_entity_name': True,
          'hidden_by': None,
          'icon': None,
          'labels': list([
          ]),
          'name': None,
          'options': dict({
          }),
          'original_name': None,
          'platform': 'heos',
          'translation_key': None,
          'unique_id': '1',
        }),
        'state': dict({
          'attributes': dict({
            'entity_picture': 'http://',
            'friendly_name': 'Test Player',
            'group_members': list([
              'media_player.test_player',
              'media_player.test_player_2',
            ]),
            'is_volume_muted': False,
            'media_album_id': '1',
            'media_album_name': 'Album',
            'media_artist': 'Artist',
            'media_content_id': '1',
            'media_content_type': 'music',
            'media_queue_id': 1,
            'media_source_id': 10,
            'media_station': 'Station Name',
            'media_title': 'Song',
            'media_type': 'station',
            'repeat': 'off',
            'shuffle': False,
            'source_list': list([
              "Today's Hits Radio",
              'Classical MPR (Classical Music)',
              'HEOS Drive - Line In 1',
              'Speaker - Line In 1',
            ]),
            'supported_features': 3079741,
            'volume_level': 0.25,
          }),
          'context': dict({
            'parent_id': None,
            'user_id': None,
          }),
          'entity_id': 'media_player.test_player',
          'state': 'idle',
        }),
      }),
    ]),
    'player': dict({
      'available': True,
      'control': 0,
      'group_id': 999,
      'ip_address': '127.0.0.1',
      'is_muted': False,
      'line_out': 1,
      'model': 'HEOS Drive HS2',
      'name': 'Test Player',
      'network': 'wired',
      'now_playing_media': dict({
        'album': 'Album',
        'album_id': '1',
        'artist': 'Artist',
        'current_position': None,
        'current_position_updated': None,
        'duration': None,
        'image_url': 'http://',
        'media_id': '1',
        'options': list([
        ]),
        'queue_id': 1,
        'song': 'Song',
        'source_id': 10,
        'station': 'Station Name',
        'supported_controls': list([
          'play',
          'pause',
          'stop',
          'play_next',
          'play_previous',
        ]),
        'type': 'station',
      }),
      'playback_error': None,
      'player_id': 1,
      'repeat': 'off',
      'serial': '**REDACTED**',
      'shuffle': False,
      'state': 'stop',
      'supported_version': True,
      'version': '1.0.0',
      'volume': 25,
    }),
  })
# ---
